# fast-api-playground

./: .dockerignore  .gitignore  README.md  build.sh  pyproject.toml
config/: hypercorn_config.toml  hypercorn_secure_config.toml
docs/: how-fast.md
ops/: Dockerfile  docker-compose.yml  startup.sh  world-cities.ipynb
src/: pyproject.toml  requirements.txt
src/worldpop/: hello.py  models.py  redis_helper.py  serve.py  startup.sh  utils.py  world-cities.ipynb
src/worldpop/pb/: random_city.proto  random_city_pb2.py  random_city_pb2_grpc.py
